group creation completed, SQL Injection problem found... need to fix all querys with prepared statements

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -120,6 +120,7 @@
             android:id="@+id/registerButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_add_person"
             android:hint="@string/register"
             android:textSize="16sp"
             android:textStyle="bold"
