--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,7 @@
             android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_login"
             android:hint="@string/login"
             android:textSize="16dp"
             android:textStyle="bold"
@@ -91,6 +92,7 @@
             android:id="@+id/registerInsteadButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_add_person"
             android:hint="@string/register"
             android:textSize="16dp"
             android:textStyle="bold"
